增加侧边栏和页内跳转

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algorithm Classroom</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/norm.css">
+    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
     <header>
@@ -18,10 +20,13 @@
       </div>
 
     <div class="content">
+        <h1 id="about">关于</h1>
         <p>本项目参考于 <a href="https://oi-wiki.org/">OI Wiki</a>。</p>
         <p>由于 OI Wiki 主要面向算法竞赛选手，其中大部分算法难度较高、实用性较窄，对一般的算法学习者来说并不友好。</p>
         <p>本项目面向广大算法学习者，更细致地讲解一些实用性高的算法。</p>
     </div>
 
+    <div class="sidebar" id="sidebar"></div>
+    <script src="js/sidebar.js"></script>
 </body>
 </html>
