--- a/index.html
+++ b/index.html
@@ -3,30 +3,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algorithm Classroom</title>
-    <link rel="stylesheet" href="css/norm.css">
-    <link rel="stylesheet" href="css/sidebar.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/headbar.css">
+    <link rel="stylesheet" href="css/text.css">
+    <link rel="stylesheet" href="css/leftbar.css">
 </head>
 <body>
-    <header>
-        Algorithm Classroom
-    </header>
-
-    <div class="navbar">
+    <div class="headbar">
+        <p>Algorithm Classroom</p>
         <ul>
-          <li><a href="#">首页</a></li>
-          <li><a href="docs/bs.html">二分</a></li>
+            <li><a href="#">简介</a></li>
+            <li><a href="solution/index.html">比赛题解</a></li>
+            <li><a href="basic/index.html">算法基础</a></li>
+            <li><a href="dp/index.html">动态规划</a></li>
+            <li><a href="string/index.html">字符串</a></li>
+            <li><a href="ds/index.html">数据结构</a></li>
+            <li><a href="graph/index.html">图论</a></li>
+            <li><a href="geometry/index.html">计算几何</a></li>
         </ul>
-      </div>
-
-    <div class="content">
-        <h1 id="about">关于</h1>
-        <p>本项目参考于 <a href="https://oi-wiki.org/">OI Wiki</a>。</p>
-        <p>由于 OI Wiki 主要面向算法竞赛选手，其中大部分算法难度较高、实用性较窄，对一般的算法学习者来说并不友好。</p>
-        <p>本项目面向广大算法学习者，更细致地讲解一些实用性高的算法。</p>
     </div>
 
-    <div class="sidebar" id="sidebar"></div>
-    <script src="js/sidebar.js"></script>
+    <div class="leftbar">
+        <ul>
+            <li><a href="#">简介</a></li>
+        </ul>
+    </div>
+
+    <div class="text">
+        <h1>关于本站</h1>
+        <p>本项目参考于 <a href="https://oi-wiki.org/">OI Wiki</a>。</p>
+        <p>由于 OI Wiki 主要面向算法竞赛选手，其中大部分算法难度较高、实用性较窄，对算法初学者来说并不友好。</p>
+        <p>本项目面向广大算法学习者，讲解得更加基础细致，但不乏全面性，包括贪心、动态规划、图论、字符串等基础算法。</p>
+        <p>除此之外，本项目还会附带更丰富的习题讲解，并且会不定期地更新一些比赛的题解。</p>
+        <br>
+        <h1>说明</h1>
+        <p>在算法研究中，时空效率极为重要，所以一般我们会选择效率较高的编程语言来解决算法问题。</p>
+        <p>本站的绝大多数编程实例都将采用 C++ 实现。
+    </div>
 </body>
 </html>
