--- a/basic/binary_search.html
+++ b/basic/binary_search.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="../css/text.css">
     <link rel="stylesheet" href="../css/leftbar.css">
     <link rel="stylesheet" href="../css/code.css">
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" async
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+          tex2jax: {
+            inlineMath: [['$', '$'], ['\\(', '\\)']],
+            displayMath: [['$$', '$$'], ['\\[', '\\]']],
+            processEscapes: true
+          }
+        });
+    </script>
+      
 </head>
 <body>
     <div class="headbar">
@@ -35,7 +47,6 @@
         <h1>引入</h1>
         <p>二分是一个非常基础但实用性很广的算法。二分基于分治的思想，每次处理会将问题的规模减小一半。</p>
         <p>最常见的，就是查找有序数组中的给定元素。我们可以通过比较中点和给定元素大小关系，来决定下一次比较的区间。</p>
-        <br>
         <pre><code>// 假设 a 数组递增
 int find(std::vector&lt;int&gt; a, int v) {
     int lo = 0, hi = int(a.size()) - 1;
@@ -51,8 +62,19 @@ int find(std::vector&lt;int&gt; a, int v) {
     }
     return -1;
 }</code></pre>
+    <p>我们发现，每循环一次，区间长度减半，因此这个过程的时间复杂度为 $O(n\log n)$。</p>
     <br>
-    <p>我们发现，每循环一次，区间长度减半，因此这个过程的时间复杂度为 $O(n\logn)$</p>
-    </div>
+    <h1>扩展应用</h1>
+    <p>二分法的运用不止于此，接下来介绍几个其他应用。</p>
+    <h2>二分答案</h2>
+    <p>解题的时候往往会考虑枚举答案然后检验枚举的值是否正确。若满足单调性，则满足使用二分法的条件。把这里的枚举换成二分，就变成了「二分答案」。</p>
+    <h3>例题1</a></h3>
+    <p>给定一个序列 $a_1,a_2,\dots,a_n$，你有 $k$ 次操作机会，每次操作可以选择一个数将其减 $1$，使序列中的最大值最小化。</p>
+    <p>（$1\leq n\leq 10^6$，$1\leq a_i,k\leq 10^9$）。</p>
+
+    <br>
+    <h1>参考内容</h1>
+    <p><a href="https://oi-wiki.org/basic/binary/">OI Wiki</a></p>
+</div>
 </body>
 </html>
