--- a/dp/index.html
+++ b/dp/index.html
@@ -16,10 +16,10 @@
             <li><a href="../solution/index.html">比赛题解</a></li>
             <li><a href="../basic/index.html">算法基础</a></li>
             <li><a href="../dp/index.html">动态规划</a></li>
-            <li><a href="../string/index.html">字符串</a></li>
-            <li><a href="../ds/index.html">数据结构</a></li>
-            <li><a href="../graph/index.html">图论</a></li>
-            <li><a href="../geometry/index.html">计算几何</a></li>
+            <li>字符串</li>
+            <li>数据结构</li>
+            <li>图论</li>
+            <li>计算几何</li>
         </ul>
     </div>
 
