增加单选按钮的value

--- a/form.html
+++ b/form.html
@@ -27,14 +27,14 @@
     <div class="text">
         <form action="">
             <h1>文章分类</h1>
-            <input type="radio" name="classify">简介
-            <input type="radio" name="classify">比赛题解
-            <input type="radio" name="classify">算法基础
-            <input type="radio" name="classify">动态规划
-            <input type="radio" name="classify" disabled="disabled">字符串
-            <input type="radio" name="classify" disabled="disabled">数据结构
-            <input type="radio" name="classify" disabled="disabled">图论
-            <input type="radio" name="classify" disabled="disabled">计算几何
+            <input type="radio" name="classify" value="intro">简介
+            <input type="radio" name="classify" value="sol">比赛题解
+            <input type="radio" name="classify" value="basic">算法基础
+            <input type="radio" name="classify" value="dp">动态规划
+            <input type="radio" name="classify" disabled="disabled" value="str">字符串
+            <input type="radio" name="classify" disabled="disabled" value="ds">数据结构
+            <input type="radio" name="classify" disabled="disabled" value="graph">图论
+            <input type="radio" name="classify" disabled="disabled" value="geo">计算几何
             <br>
             <h1>文章内容</h1>
             <textarea rows="30" cols="100"></textarea>
