修改右边栏定位逻辑

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/headbar.css">
     <link rel="stylesheet" href="css/text.css">
     <link rel="stylesheet" href="css/leftbar.css">
-    <link rel="stylesheet" href="css/feedback.css">
+    <link rel="stylesheet" href="css/rightbar.css">
+    <script src="js/rightbar.js"></script>
 </head>
 <body>
     <div class="headbar">
@@ -20,7 +21,7 @@
             <li>数据结构</li>
             <li>图论</li>
             <li>计算几何</li>
-            <li><a href="form.html">新增</a></li>
+            <li><a href="form.html">✉️ 新增</a></li>
         </ul>
     </div>
 
@@ -30,17 +31,20 @@
         </ul>
     </div>
 
+    <div class="rightbar" id="rightbar"></div>
+
+
     <div class="text">
-        <h1>关于本站</h1>
+        <h1 id="pos1">关于本站</h1>
         <p>本项目参考于 <a href="https://oi-wiki.org/">OI Wiki</a>。</p>
         <p>由于 OI Wiki 主要面向算法竞赛选手，其中大部分算法难度较高、实用性较窄，对算法初学者来说并不友好。</p>
         <p>本项目面向广大算法学习者，讲解得更加基础细致，但不乏全面性，包括贪心、动态规划、图论、字符串等基础算法。</p>
         <p>除此之外，本项目还会附带更丰富的习题讲解，并且会不定期地更新一些比赛的题解。</p>
         <br>
-        <h1>说明</h1>
         <p>在算法研究中，时空效率极为重要，所以一般我们会选择效率较高的编程语言来解决算法问题。</p>
-        <p>本站的绝大多数编程实例都将采用 C++ 实现。
-        
+        <p>本站的绝大多数编程实例都将采用 C++ 实现。</p>
+        <br>
+        <h1 id="pos2">站点指南</h1>
     </div>
 </body>
 </html>
