--- a/basic/binary_search.html
+++ b/basic/binary_search.html
@@ -48,8 +48,7 @@
     </div>
 
     <div class="text">
-        <pos id="引入"></pos>
-        <h1>引入</h1>
+        <h1 id="pos1">引入</h1>
         <p>二分是一个非常基础但实用性很广的算法。二分基于分治的思想，每次处理会将问题的规模减小一半。</p>
         <p>最常见的，就是查找有序数组中的给定元素。我们可以通过比较中点和给定元素大小关系，来决定下一次比较的区间。</p>
         <pre><code>// 假设 a 数组递增
@@ -69,8 +68,7 @@ int find(std::vector&lt;int&gt; a, int v) {
 }</code></pre>
     <p>我们发现，每循环一次，区间长度减半，因此这个过程的时间复杂度为 $O(n\log n)$。</p>
     <br>
-    <pos id="扩展应用"></pos>
-    <h1>扩展应用</h1>
+    <h1 id="pos2">扩展应用</h1>
     <p>二分法的运用不止于此，接下来介绍几个其他应用。</p>
     <h2>二分答案</h2>
     <p>解题的时候往往会考虑枚举答案然后检验枚举的值是否正确。若满足单调性，则满足使用二分法的条件。把这里的枚举换成二分，就变成了「二分答案」。</p>
@@ -95,7 +93,7 @@ while (lo < hi) {
 return lo;</code></pre>
     <br>
     <pos id="参考内容"></pos>
-    <h1>参考内容</h1>
+    <h1 id="pos3">参考内容</h1>
     <p><a href="https://oi-wiki.org/basic/binary/">OI Wiki</a></p>
 </div>
 </body>
