--- a/solution/index.html
+++ b/solution/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/text.css">
     <link rel="stylesheet" href="../css/leftbar.css">
     <link rel="stylesheet" href="../css/code.css">
+    <link rel="stylesheet" href="../css/rightbar.css">
+    <script src="../js/rightbar.js"></script>
 </head>
 <body>
     <div class="headbar">
@@ -28,6 +30,8 @@
             <li><a href="#">比赛题解</a></li>
         </ul>
     </div>
+
+    <div class="rightbar" id="rightbar"></div>
 
     <div class="text">
         <h1>模块简介</h1>
