--- a/form.html
+++ b/form.html
@@ -25,27 +25,24 @@
     </div>
 
     <div class="text">
-        <form action="">
+        <form action="mailto:algorithmclassroom@gmail.com" enctype="text/plain">
             <h1>文章分类</h1>
-            <input type="radio" name="classify" value="intro">简介
-            <input type="radio" name="classify" value="sol">比赛题解
-            <input type="radio" name="classify" value="basic">算法基础
-            <input type="radio" name="classify" value="dp">动态规划
-            <input type="radio" name="classify" disabled="disabled" value="str">字符串
-            <input type="radio" name="classify" disabled="disabled" value="ds">数据结构
-            <input type="radio" name="classify" disabled="disabled" value="graph">图论
-            <input type="radio" name="classify" disabled="disabled" value="geo">计算几何
+            <input type="radio" name="subject" type="text" value="简介" checked>简介
+            <input type="radio" name="subject" type="text" value="比赛题解">比赛题解
+            <input type="radio" name="subject" type="text" value="算法基础">算法基础
+            <input type="radio" name="subject" type="text" value="动态规划">动态规划
+            <input type="radio" name="subject" type="text" value="字符串">字符串
+            <input type="radio" name="subject" type="text" value="数据结构">数据结构
+            <input type="radio" name="subject" type="text" value="图论">图论
+            <input type="radio" name="subject" type="text" value="计算几何">计算几何
             <br>
             <h1>文章内容</h1>
-            <textarea rows="30" cols="100"></textarea>
+            <textarea name="body" rows="30" cols="100"></textarea>
             <br>
             <br>
             <input type="submit">
         </form>
     </div>
 
-    <form>
-
-    </form>
 </body>
 </html>
