增加站点指南

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <p>本站的绝大多数编程实例都将采用 C++ 实现。</p>
         <br>
         <h1 id="pos2">站点指南</h1>
+        <p>目前简介、比赛题解、算法基础、动态规划的框架已经搭建完成，其中算法基础部分中的《二分》是一篇较为完整的文章。<p>
     </div>
 </body>
 </html>
