--- a/dp/index.html
+++ b/dp/index.html
@@ -22,6 +22,7 @@
             <li>数据结构</li>
             <li>图论</li>
             <li>计算几何</li>
+            <li><a href="../form.html">✉️ 新增</a></li>
         </ul>
     </div>
 
