--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
             <li>数据结构</li>
             <li>图论</li>
             <li>计算几何</li>
-            <li><a href="index.html">🏠 主页</a></li>
+            <li><a href="index.html"><span class="return"></span> 主页</a></li>
         </ul>
     </div>
 
